package protocol;

enum AccountMsgID
{
	//客户端与账号服务器之间的数据
	Msg_GetType = 0;
	Msg_RegisterPlayer = 1;//注册玩家请求
	Msg_RegisterResult = 2;//注册结果
	Msg_LoginInfo = 3;//登陆请求
	Msg_LoginResult = 4;//登陆结果
	
	//账号服务器与游戏服务器之间的通信
	Msg_GetGameAccount = 100;//获取Game游戏服务器的人数
	Msg_GameResult = 101;//返回Game在线人数人数
	Msg_NoteGame = 102;//通知游戏服务器玩家注册成功
}

enum GameMsgID
{
	Game_Msg_GetType = 1000;
	Game_Msg_RegisterRole = 1001;//注册具体角色
	Game_Msg_RegisterRoleResult = 1002;//角色返回
	Game_Msg_GetRoleInfo = 1003;//角色请求
	Game_Msg_RoleInfoResult = 1004;//角色返回
}

message Account {
	
	message GetType{
		optional AccountMsgID pid = 1 ;
	}
	
	//客户端消息
	message LoginInfo{
		optional AccountMsgID pid = 1 [default = Msg_LoginInfo];
		optional string playername = 2;  
		optional string passworld = 3;
	}

	message LoginResult {
		optional AccountMsgID pid = 1 [default = Msg_LoginResult];
		optional int32 result = 2;
		optional string gameserver = 3;
		optional int32 player_id = 4;	
	}
	
	message RegisterPlayer {
		optional AccountMsgID pid = 1 [default = Msg_RegisterPlayer];  
		optional string playername = 2;
		optional string passworld = 3;
	}
	
	
	message RegisterResult {
		optional AccountMsgID pid = 1 [default = Msg_RegisterResult];
		optional int32 result = 2;
	}
	
	//发送给game消息
	message GetGameAccount {
		optional AccountMsgID pid = 1 [default = Msg_GetGameAccount];
	}
	
	message GameResult {
		optional AccountMsgID pid = 1 [default = Msg_GameResult];
		optional int32 count = 2;
		optional string game_address = 3;
	}
	
	message NoteGame {
		optional AccountMsgID pid = 1 [default = Msg_NoteGame];
		optional int32 player_id = 2;
	}
}

message Game {
	message GetType{
		optional GameMsgID pid = 1 [default = Game_Msg_GetType];
	}
	
	message BaseRole {
		required int32 player_id = 1;//玩家的id
		required int32 name = 2;//玩家名字
		required bool gender = 3;//性别 true:男 false:女
	}
		
	message RegisterRole {
		optional GameMsgID pid = 1 [default = Game_Msg_RegisterRole];
		optional BaseRole info = 2;
	}
	
	message RegisterRoleResult{
		optional GameMsgID pid = 1 [default = Game_Msg_RegisterRoleResult];
		optional int32 result = 2;
	}
	
	message GetRoleInfo{
		optional GameMsgID pid = 1 [default = Game_Msg_GetRoleInfo];
	}
	
	message RoleInfo {
		optional BaseRole base_role = 1;
		repeated int32 equip_ids = 2;
		repeated int32 task_ids = 3;
	}
	
	message RoleInfoResult{
		optional GameMsgID pid = 1 [default = Game_Msg_RoleInfoResult];
		optional RoleInfo role_info = 2; 
	}
	
}